# pkt-schedule-bot

./: .gitignore  bot.py  pyproject.toml
src/: bot.py  config.py
src/handlers/: __init__.py  commands.py  main_menu.py  menu.py  registration.py  search_button.py  user_registration.py
src/keyboards/: main_menu_keyboard.py  search_keyboard.py  who_is_user_keyboard.py
src/misc/: anti_flood.py  full_names.py  get_schedule.py  states.py
src/states/: bot_states.py
