[tool.poetry]
name = "pkt-schedule-bot"
version = "0.1.0"
description = ""
authors = ["Intercrus <squadew@yandex.ru>"]
readme = "README.md"
packages = [{include = "pkt_schedule_bot"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
