[tool.poetry]
name = "pkt-schedule-bot"
version = "0.1.0"
description = ""
authors = ["Intercrus <squadew@yandex.ru>"]
readme = "README.md"
packages = [{include = "pkt_schedule_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.22.2"
environs = "^9.5.0"
PyDrive = "^1.3.1"
gspread = "^5.6.0"
APScheduler = "^3.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
